<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/addIngredientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Search Ingredient"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editIngredientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addIngredientTitle"
        android:hint="Name"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/addIngredientConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editIngredientName"
        android:text="Search" />
</RelativeLayout>