<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/selectIngredientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Select an ingredient"
        android:textAppearance="@android:style/Theme.Black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/selectIngredientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectIngredientTitle"
        android:divider="#32000000"
        android:dividerHeight="1dp"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp" />

</RelativeLayout>