...
            app:itemRippleColor="@android:color/transparent"
            app:menu="@menu/bottom_navigation_menu" />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fridgeFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabCustomSize="70dp"
        app:layout_anchor="@id/bottomAppBar"
        app:maxImageSize="50dp"
        app:srcCompat="@drawable/ic_recipez_logo" />
...
